# MultithreadFileSearch

./: CMakeLists.txt  ReadMe.md
inc/: FileHandler.hpp  SearchEngine.hpp  ThreadPool.hpp
src/: FileHandler.cpp  SearchEngine.cpp  ThreadPool.cpp  main.cpp
tests/: mock_filehandle.hpp  test_search.cpp
